--- a/notebooks/mel_spectrigram_based_enc_q.ipynb
+++ b/notebooks/mel_spectrigram_based_enc_q.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "513"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +93,14 @@
     "    gin_channels=0,\n",
     "    use_sdp=True,\n",
     "    use_transformer_flows=True,\n",
+    "    transformer_flow_type='mono_layer',\n",
     "    use_spk_conditioned_encoder=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +112,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[0.0338, 0.0272, 0.0110,  ..., 0.0282, 0.0062, 0.0129]],\n",
+       " \n",
+       "         [[0.0328, 0.0266, 0.0114,  ..., 0.0280, 0.0062, 0.0134]]],\n",
+       "        grad_fn=<TanhBackward0>),\n",
+       " tensor([3.5261, 3.6803], grad_fn=<DivBackward0>),\n",
+       " tensor([[[[1., 0., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 0., 1.],\n",
+       "           [0., 0., 1.]]],\n",
+       " \n",
+       " \n",
+       "         [[[1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [1., 0., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 1., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.],\n",
+       "           [0., 0., 0.]]]]),\n",
+       " tensor([-6096, -2013]),\n",
+       " tensor([[[1., 1., 1.]],\n",
+       " \n",
+       "         [[1., 1., 0.]]]),\n",
+       " tensor([[[1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]],\n",
+       " \n",
+       "         [[1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "           1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0.,\n",
+       "           0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]]),\n",
+       " (tensor([[[ 0.5529, -0.0753, -0.7719,  ..., -1.9191,  1.1668,  2.5012],\n",
+       "           [-0.1849,  0.5693, -0.6975,  ...,  1.1951,  0.8764,  1.9842],\n",
+       "           [-0.4652, -1.1659,  0.1372,  ..., -1.0340,  0.0352, -1.3787],\n",
+       "           ...,\n",
+       "           [-1.3516,  0.3958, -0.8511,  ...,  0.8227,  0.6081, -0.3844],\n",
+       "           [-0.1052, -0.4328, -1.2136,  ...,  0.1315, -0.2634,  0.7548],\n",
+       "           [-0.3337, -0.8609, -0.3721,  ..., -0.6780, -1.7263,  1.6954]],\n",
+       "  \n",
+       "          [[-0.2083, -1.2020, -1.5732,  ...,  0.0000, -0.0000, -0.0000],\n",
+       "           [ 3.3673, -1.2969,  1.8926,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           [-0.3660, -0.3530, -0.2042,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           ...,\n",
+       "           [-1.3993, -0.2475, -0.6262,  ..., -0.0000,  0.0000,  0.0000],\n",
+       "           [ 0.7208,  0.1035,  0.0745,  ..., -0.0000,  0.0000,  0.0000],\n",
+       "           [-1.5623,  0.7119, -0.0714,  ..., -0.0000, -0.0000, -0.0000]]],\n",
+       "         grad_fn=<MulBackward0>),\n",
+       "  tensor([[[ 0.5529, -0.0753, -0.7719,  ..., -1.9191,  1.1668,  2.5012],\n",
+       "           [-0.1849,  0.5693, -0.6975,  ...,  1.1951,  0.8764,  1.9842],\n",
+       "           [-0.4652, -1.1659,  0.1372,  ..., -1.0340,  0.0352, -1.3787],\n",
+       "           ...,\n",
+       "           [-1.3516,  0.3958, -0.8511,  ...,  0.8227,  0.6081, -0.3844],\n",
+       "           [-0.1052, -0.4328, -1.2136,  ...,  0.1315, -0.2634,  0.7548],\n",
+       "           [-0.3337, -0.8609, -0.3721,  ..., -0.6780, -1.7263,  1.6954]],\n",
+       "  \n",
+       "          [[-0.2083, -1.2020, -1.5732,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [ 3.3673, -1.2969,  1.8926,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [-0.3660, -0.3530, -0.2042,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           ...,\n",
+       "           [-1.3993, -0.2475, -0.6262,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [ 0.7208,  0.1035,  0.0745,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [-1.5623,  0.7119, -0.0714,  ...,  0.0000,  0.0000,  0.0000]]],\n",
+       "         grad_fn=<FlipBackward0>),\n",
+       "  tensor([[[ 0.3950,  0.0433,  0.0433,  ...,  0.0433, -0.3171, -0.3171],\n",
+       "           [ 0.8213,  1.0522,  1.0522,  ...,  1.0522,  1.1154,  1.1154],\n",
+       "           [-0.2242, -0.3354, -0.3354,  ..., -0.3354, -0.4789, -0.4789],\n",
+       "           ...,\n",
+       "           [ 0.5333, -0.1483, -0.1483,  ..., -0.1483, -0.0340, -0.0340],\n",
+       "           [-1.4427, -0.6373, -0.6373,  ..., -0.6373, -0.5231, -0.5231],\n",
+       "           [-0.5234, -0.9242, -0.9242,  ..., -0.9242, -1.7127, -1.7127]],\n",
+       "  \n",
+       "          [[-0.1008, -0.1008, -0.1008,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [-0.4055, -0.4055, -0.4055,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [-0.8439, -0.8439, -0.8439,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           ...,\n",
+       "           [ 0.8737,  0.8737,  0.8737,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [ 0.3068,  0.3068,  0.3068,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [ 0.4637,  0.4637,  0.4637,  ...,  0.0000,  0.0000,  0.0000]]],\n",
+       "         grad_fn=<TransposeBackward0>),\n",
+       "  tensor([[[ 8.2725e-01,  2.6093e-01,  2.6093e-01,  ...,  2.6093e-01,\n",
+       "             1.0294e+00,  1.0294e+00],\n",
+       "           [ 4.3555e-01,  2.6338e-01,  2.6338e-01,  ...,  2.6338e-01,\n",
+       "            -3.6142e-01, -3.6142e-01],\n",
+       "           [-4.9235e-01, -1.3506e-04, -1.3506e-04,  ..., -1.3506e-04,\n",
+       "            -3.5885e-01, -3.5885e-01],\n",
+       "           ...,\n",
+       "           [ 1.7293e-01,  5.1932e-01,  5.1932e-01,  ...,  5.1932e-01,\n",
+       "             6.9148e-01,  6.9148e-01],\n",
+       "           [ 6.7165e-02,  6.1581e-01,  6.1581e-01,  ...,  6.1581e-01,\n",
+       "             7.4460e-01,  7.4460e-01],\n",
+       "           [-1.3891e-01, -5.3567e-02, -5.3567e-02,  ..., -5.3567e-02,\n",
+       "            -8.2245e-02, -8.2245e-02]],\n",
+       "  \n",
+       "          [[ 4.7802e-01,  4.7802e-01,  4.7802e-01,  ...,  0.0000e+00,\n",
+       "             0.0000e+00,  0.0000e+00],\n",
+       "           [ 5.1800e-01,  5.1800e-01,  5.1800e-01,  ...,  0.0000e+00,\n",
+       "             0.0000e+00,  0.0000e+00],\n",
+       "           [-6.5558e-01, -6.5558e-01, -6.5558e-01,  ...,  0.0000e+00,\n",
+       "             0.0000e+00,  0.0000e+00],\n",
+       "           ...,\n",
+       "           [-1.7598e-01, -1.7598e-01, -1.7598e-01,  ...,  0.0000e+00,\n",
+       "             0.0000e+00,  0.0000e+00],\n",
+       "           [-1.7760e-01, -1.7760e-01, -1.7760e-01,  ...,  0.0000e+00,\n",
+       "             0.0000e+00,  0.0000e+00],\n",
+       "           [ 6.5571e-01,  6.5571e-01,  6.5571e-01,  ...,  0.0000e+00,\n",
+       "             0.0000e+00,  0.0000e+00]]], grad_fn=<TransposeBackward0>),\n",
+       "  tensor([[[ 0.2886,  0.3588, -0.0614,  ..., -0.1003,  0.1379,  0.0694],\n",
+       "           [ 0.1004, -0.3046, -0.0178,  ...,  0.1380, -0.1523, -0.3232],\n",
+       "           [-0.1997, -0.0924,  0.0665,  ..., -0.3837, -0.1047,  0.0281],\n",
+       "           ...,\n",
+       "           [-0.0813, -0.2318,  0.1418,  ..., -0.2992,  0.0339,  0.0576],\n",
+       "           [-0.1396,  0.1379,  0.2882,  ...,  0.0366,  0.4109,  0.1866],\n",
+       "           [-0.1079,  0.0600, -0.2090,  ..., -0.0605, -0.2506,  0.0518]],\n",
+       "  \n",
+       "          [[ 0.0401,  0.2887, -0.2743,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [-0.1966, -0.2910, -0.2535,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [-0.0968,  0.1066,  0.0071,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           ...,\n",
+       "           [-0.1705,  0.0383, -0.0513,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           [-0.1274,  0.1905, -0.2801,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           [-0.4087,  0.0420,  0.1580,  ...,  0.0000,  0.0000,  0.0000]]],\n",
+       "         grad_fn=<SplitBackward0>),\n",
+       "  tensor([[[ 0.0148, -0.5224, -0.3067,  ...,  0.2025, -0.2454,  0.0655],\n",
+       "           [ 0.2122,  0.4355,  0.2740,  ...,  0.1786,  0.4038,  0.2941],\n",
+       "           [ 0.0097, -0.1608,  0.0600,  ..., -0.3837, -0.1705, -0.2267],\n",
+       "           ...,\n",
+       "           [ 0.1326, -0.2615,  0.0865,  ..., -0.0471, -0.0287,  0.0619],\n",
+       "           [-0.1711,  0.0304,  0.1919,  ...,  0.0783, -0.0543, -0.1564],\n",
+       "           [ 0.4314,  0.2086, -0.3509,  ...,  0.3166,  0.0717,  0.0858]],\n",
+       "  \n",
+       "          [[-0.0462, -0.2470, -0.0451,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           [ 0.4779,  0.3477,  0.6895,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           [-0.0124, -0.0780,  0.1693,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           ...,\n",
+       "           [-0.1638,  0.0079,  0.0147,  ..., -0.0000, -0.0000, -0.0000],\n",
+       "           [-0.0094,  0.1722,  0.1847,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "           [ 0.0723,  0.2277, -0.1503,  ...,  0.0000,  0.0000,  0.0000]]],\n",
+       "         grad_fn=<SplitBackward0>)))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "net_g(\n",
     "    x=x,\n",
