inference.ipynb updated
- qol

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -49,7 +49,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hps = utils.get_hparams_from_file(\"./configs/ljs_base.json\")"
+    "hps = utils.get_hparams_from_file(\"./configs/vits2_ljs_base.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"use_mel_posterior_encoder\" in hps.model.keys() and hps.model.use_mel_posterior_encoder == True:\n",
+    "    print(\"Using mel posterior encoder for VITS2\")\n",
+    "    posterior_channels = 80 #vits2\n",
+    "    hps.data.use_mel_posterior_encoder = True\n",
+    "else:\n",
+    "    print(\"Using lin posterior encoder for VITS1\")\n",
+    "    posterior_channels = hps.data.filter_length // 2 + 1  \n",
+    "    hps.data.use_mel_posterior_encoder = False"
    ]
   },
   {
@@ -95,7 +111,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hps = utils.get_hparams_from_file(\"./configs/vctk_base.json\")"
+    "hps = utils.get_hparams_from_file(\"./configs/vits2_vctk_base.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"use_mel_posterior_encoder\" in hps.model.keys() and hps.model.use_mel_posterior_encoder == True:\n",
+    "    print(\"Using mel posterior encoder for VITS2\")\n",
+    "    posterior_channels = 80 #vits2\n",
+    "    hps.data.use_mel_posterior_encoder = True\n",
+    "else:\n",
+    "    print(\"Using lin posterior encoder for VITS1\")\n",
+    "    posterior_channels = hps.data.filter_length // 2 + 1  \n",
+    "    hps.data.use_mel_posterior_encoder = False"
    ]
   },
   {
@@ -106,7 +138,7 @@
    "source": [
     "net_g = SynthesizerTrn(\n",
     "    len(symbols),\n",
-    "    hps.data.filter_length // 2 + 1,\n",
+    "    posterior_channels,\n",
     "    hps.train.segment_size // hps.data.hop_length,\n",
     "    n_speakers=hps.data.n_speakers,\n",
     "    **hps.model).cuda()\n",
