transformer flow update

--- a/notebooks/transformer_nflows.ipynb
+++ b/notebooks/transformer_nflows.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,74 +342,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MonoTransformerFlowLayer(nn.Module):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        channels,\n",
-    "        hidden_channels,\n",
-    "        mean_only=False,\n",
-    "    ):\n",
-    "        assert channels % 2 == 0, \"channels should be divisible by 2\"\n",
-    "        super().__init__()\n",
-    "        self.channels = channels\n",
-    "        self.hidden_channels = hidden_channels\n",
-    "        self.half_channels = channels // 2\n",
-    "        self.mean_only = mean_only\n",
-    "        #vits2\n",
-    "        self.pre_transformer = attentions.Encoder(\n",
-    "            self.half_channels,\n",
-    "            self.half_channels,\n",
-    "            n_heads=2,\n",
-    "            n_layers=2,\n",
-    "            kernel_size=3,\n",
-    "            p_dropout=0.1,\n",
-    "            window_size=None\n",
-    "            )\n",
-    "        \n",
-    "        self.post = nn.Conv1d(self.half_channels, self.half_channels * (2 - mean_only), 1)\n",
-    "        self.post.weight.data.zero_()\n",
-    "        self.post.bias.data.zero_()\n",
+    "class MonoTransformerFlowLayer(nn.Module): #vits2\n",
+    "  def __init__(\n",
+    "      self,\n",
+    "      channels,\n",
+    "      hidden_channels,\n",
+    "      mean_only=False,\n",
+    "      residual_connection=True,\n",
+    "  ):\n",
+    "    assert channels % 2 == 0, \"channels should be divisible by 2\"\n",
+    "    super().__init__()\n",
+    "    self.channels = channels\n",
+    "    self.hidden_channels = hidden_channels\n",
+    "    self.half_channels = channels // 2\n",
+    "    self.mean_only = mean_only\n",
+    "    self.residual_connection = residual_connection\n",
+    "    #vits2\n",
+    "    self.pre_transformer = attentions.Encoder(\n",
+    "        self.half_channels,\n",
+    "        self.half_channels,\n",
+    "        n_heads=2,\n",
+    "        n_layers=2,\n",
+    "        kernel_size=3,\n",
+    "        p_dropout=0.1,\n",
+    "        window_size=None\n",
+    "        )\n",
+    "    \n",
+    "    self.post = nn.Conv1d(self.half_channels, self.half_channels * (2 - mean_only), 1)\n",
+    "    self.post.weight.data.zero_()\n",
+    "    self.post.bias.data.zero_()\n",
     "\n",
-    "    def forward(self, x, x_mask, g=None, reverse=False):\n",
+    "  def forward(self, x, x_mask, g=None, reverse=False):\n",
+    "    if self.residual_connection:\n",
+    "      if not reverse:\n",
     "        x0, x1 = torch.split(x, [self.half_channels] * 2, 1)\n",
-    "        x0_ = self.pre_transformer(x0 * x_mask, x_mask) #vits2\n",
-    "        h = x0_ + x0 #vits2\n",
-    "        stats = self.post(h) * x_mask\n",
+    "        x0_ = x0 * x_mask\n",
+    "        x0_ = self.pre_transformer(x0, x_mask) #vits2\n",
+    "        stats = self.post(x0_) * x_mask\n",
     "        if not self.mean_only:\n",
-    "            m, logs = torch.split(stats, [self.half_channels] * 2, 1)\n",
+    "          m, logs = torch.split(stats, [self.half_channels] * 2, 1)\n",
     "        else:\n",
-    "            m = stats\n",
-    "            logs = torch.zeros_like(m)\n",
-    "        if not reverse:\n",
-    "            x1 = m + x1 * torch.exp(logs) * x_mask\n",
-    "            x = torch.cat([x0, x1], 1)\n",
-    "            logdet = torch.sum(logs, [1, 2])\n",
-    "            return x, logdet\n",
+    "          m = stats\n",
+    "          logs = torch.zeros_like(m)\n",
+    "        x1 = m + x1 * torch.exp(logs) * x_mask\n",
+    "        x_ = torch.cat([x0, x1], 1)\n",
+    "        x = x + x_\n",
+    "        logdet = torch.sum(torch.log(torch.exp(logs) + 1), [1, 2])\n",
+    "        logdet = logdet + torch.log(torch.tensor(2)) * (x0.shape[1]* x0.shape[2])\n",
+    "        return x, logdet\n",
+    "      else:\n",
+    "        x0, x1 = torch.split(x, [self.half_channels] * 2, 1)\n",
+    "        x0 = x0/2 \n",
+    "        x0_ = x0 * x_mask\n",
+    "        x0_ = self.pre_transformer(x0, x_mask) #vits2\n",
+    "        stats = self.post(x0_) * x_mask\n",
+    "        if not self.mean_only:\n",
+    "          m, logs = torch.split(stats, [self.half_channels] * 2, 1)\n",
     "        else:\n",
-    "            x1 = (x1 - m) * torch.exp(-logs) * x_mask\n",
-    "            x = torch.cat([x0, x1], 1)\n",
-    "            return x"
+    "          m = stats\n",
+    "          logs = torch.zeros_like(m)\n",
+    "        x1_ = ((x1 - m) / (1 + torch.exp(-logs))) * x_mask\n",
+    "        x = torch.cat([x0, x1_], 1)\n",
+    "        return x\n",
+    "    else:\n",
+    "      x0, x1 = torch.split(x, [self.half_channels] * 2, 1)\n",
+    "      x0_ = self.pre_transformer(x0 * x_mask, x_mask) #vits2\n",
+    "      h = x0_ + x0 #vits2\n",
+    "      stats = self.post(h) * x_mask\n",
+    "      if not self.mean_only:\n",
+    "          m, logs = torch.split(stats, [self.half_channels] * 2, 1)\n",
+    "      else:\n",
+    "          m = stats\n",
+    "          logs = torch.zeros_like(m)\n",
+    "      if not reverse:\n",
+    "          x1 = m + x1 * torch.exp(logs) * x_mask\n",
+    "          x_ = torch.cat([x0, x1], 1)\n",
+    "          logdet = torch.sum(logs, [1, 2])\n",
+    "          return x, logdet\n",
+    "      else:\n",
+    "          x1 = (x1 - m) * torch.exp(-logs) * x_mask\n",
+    "          x = torch.cat([x0, x1], 1)\n",
+    "          return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  'channels', 'hidden_channels', 'kernel_size', 'dilation_rate', and 'n_layers\n",
     "test_flow_layer_3 = MonoTransformerFlowLayer(\n",
-    "    inter_channels, hidden_channels\n",
+    "    inter_channels, hidden_channels, residual_connection=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +463,7 @@
        "tensor(True)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
