AVAILABLE_FLOW_TYPES

--- a/notebooks/mel_spectrigram_based_enc_q.ipynb
+++ b/notebooks/mel_spectrigram_based_enc_q.ipynb
@@ -93,7 +93,7 @@
     "    gin_channels=0,\n",
     "    use_sdp=True,\n",
     "    use_transformer_flows=True,\n",
-    "    transformer_flow_type='mono_layer',\n",
+    "    transformer_flow_type='mono_layer_post_residual',\n",
     "    use_spk_conditioned_encoder=True,\n",
     ")"
    ]
