[Feat] add voice conversion code from original

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -193,12 +193,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7f0753ef-8103-4ef5-b431-3067a86e92b7",
+   "metadata": {},
+   "source": [
+    "# Voice Conversion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f737176-c129-4859-a9b9-435f2d02e371",
+   "id": "92aaa17e-19fa-4cc9-935b-02a6a4f897de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = TextAudioSpeakerLoader(hps.data.validation_files, hps.data)\n",
+    "collate_fn = TextAudioSpeakerCollate()\n",
+    "loader = DataLoader(dataset, num_workers=0, shuffle=False,\n",
+    "    batch_size=1, pin_memory=False,\n",
+    "    drop_last=True, collate_fn=collate_fn)\n",
+    "data_list = list(loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bb98f74-78ed-4ea1-894d-120af96335c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    x, x_lengths, spec, spec_lengths, y, y_lengths, sid_src = [x.to(device) for x in data_list[0]]\n",
+    "    sid_tgt1 = torch.LongTensor([1]).to(device)\n",
+    "    sid_tgt2 = torch.LongTensor([2]).to(device)\n",
+    "    sid_tgt3 = torch.LongTensor([4]).to(device)\n",
+    "    audio1 = net_g.voice_conversion(spec, spec_lengths, sid_src=sid_src, sid_tgt=sid_tgt1)[0][0,0].data.cpu().float().numpy()\n",
+    "    audio2 = net_g.voice_conversion(spec, spec_lengths, sid_src=sid_src, sid_tgt=sid_tgt2)[0][0,0].data.cpu().float().numpy()\n",
+    "    audio3 = net_g.voice_conversion(spec, spec_lengths, sid_src=sid_src, sid_tgt=sid_tgt3)[0][0,0].data.cpu().float().numpy()\n",
+    "print(\"Original SID: %d\" % sid_src.item())\n",
+    "ipd.display(ipd.Audio(y[0].cpu().numpy(), rate=hps.data.sampling_rate, normalize=False))\n",
+    "print(\"Converted SID: %d\" % sid_tgt1.item())\n",
+    "ipd.display(ipd.Audio(audio1, rate=hps.data.sampling_rate, normalize=False))\n",
+    "print(\"Converted SID: %d\" % sid_tgt2.item())\n",
+    "ipd.display(ipd.Audio(audio2, rate=hps.data.sampling_rate, normalize=False))\n",
+    "print(\"Converted SID: %d\" % sid_tgt3.item())\n",
+    "ipd.display(ipd.Audio(audio3, rate=hps.data.sampling_rate, normalize=False))"
+   ]
   }
  ],
  "metadata": {
